# HU-V1GP-18-Jhin

./: .gitignore  CMakeLists.txt  JhinNet.sln  NOTES.md  README.md  Stormrazor.sln  Toolchain-BrickPi.cmake  build.sh  script.wms
Jhin/: Jhin.csproj  Program.cs
Jhin/Models/: MenuItem.cs
Stormrazor/: Program.cs  Stormrazor.csproj
Stormrazor/Properties/: launchSettings.json
docs/: presentatie.md
include/: BrickPi3.h  ColorMod.h  Config.h  Jhin.h  ManualControl.h  MotorControl.h  Utility.h  Wammus.h
scripts/: achthoek.wms  doggo.wms  driehoek.wms  hilbert.wms  hilbert2.wms  huis.wms  rect.wms  rectfast.wms  test.wms  zeshoek.wms
src/: BrickPi3Fake.cpp  CMakeLists.txt  CarKit.cpp  Jhin.cpp  ManualControl.cpp  MotorControl.cpp  Wammus.cpp  main.cpp
src/include/: CarKit.h  Jhin.h
